# actionet-python

./: .gitignore  .gitmodules  ADVANCED_FUNCTIONS.md  AGENTS.md  API_REFERENCE.md  BATCH_CORRECTION_IMPUTATION.md  CLEANUP_SUMMARY.md  CMakeLists.txt  MANIFEST.in  README.md  TODO.md  WRAPPER_STRUCTURE.md  install_optimized.sh  pyproject.toml  setup.py
.cursor/plans/: anndata_storage_audit_4773d590.plan.md  annotate_cells_optimization_v2.md  backed_feature_subset_perf_8d8a19fa.plan.md  backed_feature_subset_perf_revised.plan.md  optimize_impute_features_f7c401ad.plan.md
R/: imputation.R  wr_tools.cpp
context/: AGENT_BOOTSTRAP.md  AGENT_PLAYBOOK.md  BACKED_EXTENSION_AGENT_HANDOFF.md  DECISIONS.md  NETWORK_CONSTRUCTION_OPTIMIZATION_PLAN.md  OOM_BACKED_H5AD_V1_CODE_REVIEW_HANDOFF.md  PROJECT_CONTEXT.md
docs/: DENSE_BACKED_OPERATOR_IMPLEMENTATION_HANDOFF.md  backed_regression_benchmark_report.md  backed_regression_cause_investigation.md  batch_orthogonalization_algorithm.md  benchmark_report_latest.md  build_network_memory_investigation.md  c++_abi_backed_specificity_revised.plan.md  guide_calling.md  lazy_logcounts_feasibility.md
docs/_old/: ACTIONET_NORMALIZE_BACKED_HANDOFF.md  DENSE_BACKED_OPERATOR_ARCHITECTURE_HANDOFF.md  NETWORK_CONSTRUCTION_OPTIMIZATION_PLAN.md  batch_correction_c++_abi_revised.plan.md
examples/: 04_batch_correction_imputation.py
scripts/: bench_specificity_parity.py  benchmark_umap_plotting.py
src/: wp.cpp
src/actionet/: __init__.py  _backed_compression.py  _backed_persist.py  _core.cpp  _feature_lookup.py  _matrix_source.py  advanced.py  anndata_utils.py  annotation.py  backed_io.py  batch_correction.py  clustering.py  core.py  guide_calling.py  imputation.py  lazy_transform.py  pipeline.py  preprocessing.py  reduction.py  specificity.py  tools.py  visualization.py  wp_action.cpp  wp_annotation.cpp  wp_decomposition.cpp  wp_io.cpp  wp_network.cpp  wp_tools.cpp  wp_utils.cpp  wp_utils.h  wp_visualization.cpp
src/actionet/_data/: __init__.py  mito_features.csv
src/actionet/experimental/: __init__.py  _anndata_io.py
src/actionet/plotting/: __init__.py  feature_expression.py  qc.py  umap.py  utils.py
tests/: ACTIONet Scaling Benchmark Run 001 Report.md  ACTIONet Scaling Benchmark Suite.md  AGENT_BENCHMARK_BACKED_EXTENSION.md  BENCHMARK_README_DRAFT.md  benchmark_backed_annotation.py  benchmark_backed_extension.py  benchmark_backed_parallel_stage1.py  benchmark_backed_svd_algorithm.py  benchmark_branch_compare.py  benchmark_irlb_svd_simple.py  benchmark_support.py  benchmark_svd_algorithms.py  conftest.py  generate_baseline.py  parity_test_small.py  run_all_svd_tests.sh  run_benchmark.sh  test_advanced.py  test_annot.ipynb  test_backed.py  test_backed_extension.py  test_backed_rowstats_parity.py  test_batch_correction.py  test_batchcorr.ipynb  test_clustering.py  test_diffusion_nonmutation.py  test_doublets.ipynb  test_duplicate_features.py  test_enrichment_parity.py  test_essential.py  test_fast.ipynb  test_fast_backed.ipynb  test_fast_backed2.ipynb  test_fast_backed_lazy.ipynb  test_feature_lookup.py  test_fused_pipeline_parity.py  test_gpu_backend_policy.py  test_guide_call.ipynb  test_guide_calling.py  test_import.py  (+26 more)
tests/backed/: conftest.py  test_backed_extension.py  test_backed_open_operator.py  test_backed_parity.py  test_backed_reduce_kernel.py  test_backed_take_columns.py  test_checkpoint.py  test_dense_backed.py  test_infrastructure.py  test_lazy_transform_cache.py  test_memory_regression.py  test_persist_preserves_inmemory.py  test_sparse_backed_threads.py  test_specificity_regressions.py
tests/benchmark_results/: BENCHMARK_REPORT.md
tests/fixtures/: baseline_python.npz
