[build-system]
requires = [
    "scikit-build-core>=0.8.0",
    "pybind11>=2.11.0",
    "numpy>=1.21.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "actionet"
version = "0.1.0"
description = "ACTIONet: Single-cell multi-resolution data analysis toolkit"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Sebastian Pineda", email = "spineda@mit.edu"},
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "anndata>=0.8.0",
    "scanpy>=1.9.0",
    "pandas>=1.3.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "ruff>=0.0.260",
]

[project.urls]
#Homepage = "https://github.com/KellisLab/actionet-python"
Repository = "https://github.com/KellisLab/actionet-python"
"Bug Tracker" = "https://github.com/KellisLab/actionet-python/issues"

[tool.scikit-build]
minimum-version = "0.8"
build-dir = "build/{wheel_tag}"
cmake.verbose = true
cmake.build-type = "Release"
wheel.packages = ["src/actionet"]

# [tool.scikit-build.cmake.define]
# ACTIONET_ENABLE_OPTIMIZED = "OFF"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py312', 'py313']

[tool.ruff]
line-length = 100
target-version = "py312"
